# ChangeLog for squashmount

*squashmount-7.0
	Martin Väth <martin at mvath.de>:
	- WARNING: The meaning of &standard_mount() has changed!
	  Paths are now  dir/changes dir/workdir dir/readonly dir/dir.sfs
	  You should reorganize your directory structure to reflect that!
	  The reason is that WORKDIR is mandatory with new overlayfs.
	- Support current overlayfs (WORKDIR)

*squashmount-6.3
	Martin Väth <martin at mvath.de>:
	- Introduce -p/--processors, -m/--mem and $processors, $mem defaults

*squashmount-6.2
	Martin Väth <martin at mvath.de>:
	- Use the flexible $mksquash_verbose, --mksquash-verbose strings
	  instead of the previous $squash_verbose, --squash-verbose numbers.
	  To ease transition for users, currently an error is reported if
	  the now unsupported $squash_verbose is still set.

*squashmount-6.1
	Martin Väth <martin at mvath.de>:
	- Change meaning of squash_verbose.
	  Default prefers mksquashfs -quiet if available

*squashmount-6.0a
	Martin Väth <martin at mvath.de>:
	- Revert to COMPRESSION=xz default until lz4 is supported by
	  mainstream kernel

*squashmount-6.0
	Martin Väth <martin at mvath.de>:
	- Support COMPOPT_* to allow setting algorithm-specific option.
	- Default to COMPRESSION=lz4 (this is the reason for new major version)
	- Default to COMPOPT_LZ4=-Xhc
	- squashmount -vv list now outputs effective mksquashfs options
	- Fix handling of mksquash compression option.

*squashmount-5.0
	Martin Väth <martin at mvath.de>:
	- Use -always-use-fragments by default
	- Introduce DEFAULT_FRAGMENTS to avoid -always-use-fragments
	- Improve printed output of shell commands
	- Fix treatment of redirects
	- Provide example of special mksquash compression option

*squashmount-4.5
*squashmount-4.4
	Martin Väth <martin at mvath.de>:
	- Add sanity check before deleting DIR after first creation of
	  squashfile, see https://github.com/vaeth/squashmount/issues/1

*squashmount-4.3
	Martin Väth <martin at mvath.de>: